changed icons & CMakeLists

--- a/src/karbowanecwallet.desktop
+++ b/src/karbowanecwallet.desktop
@@ -1,20 +1,14 @@
 [Desktop Entry]
 Encoding=UTF-8
-Name=Karbo
-GenericName=IPBC Wallet
-Name[uk]=Карбованeць
-Name[ru]=Карбованeц
-Name[pl]=Karbowaneć
-Name[be]=Карбованэць
-Name[de]=Karbo
-Name[es]=Karbo
-Comment=Karbovanets wallet
-Comment[uk]=Гаманець Карбованца
-Comment[ru]=Кошелек Карбованца
-Comment[pl]=Portfel Karbowańca
-Comment[be]=Кашалёк Карбованца
-Comment[de]=Karbo Brieftasche
-Comment[es]=Karbo Monedero
+Name=IPBC-Wallet
+GenericName=IPBC-Wallet
+Name[uk]=IPBC-Wallet
+Name[de]=IPBC-Wallet
+Name[es]=IPBC-Wallet
+Comment=IPBC-Wallet
+Comment[uk]=IPBC-Wallet
+Comment[de]=IPBC-Wallet
+Comment[es]=IPBC-Wallet
 Exec=IPBC %U
 Terminal=false
 Type=Application
