--- a/src/cryptonotewallet.rc
+++ b/src/cryptonotewallet.rc
@@ -1,4 +1,4 @@
-IDI_ICON1               ICON    "images\karbowanez.ico"
+IDI_ICON1               ICON    "images\ipbc.ico"
 
 #include <windows.h>
 
@@ -6,7 +6,7 @@ IDI_ICON1               ICON    "images\karbowanez.ico"
 #define VER_FILEVERSION_STR         "1.0.0.3\0"
 #define VER_PRODUCTVERSION          1,2,0
 #define VER_PRODUCTVERSION_STR      "1.2.0\0"
-#define VER_FILEDESCRIPTION_STR     "Electronic Karbovanets"
+#define VER_FILEDESCRIPTION_STR     "IPBC Wallet"
 #define VER_INTERNALNAME_STR        "IPBC"
 #define VER_LEGALCOPYRIGHT_STR      "Copyright (C) 2016-2017, IPBC Developers"
 #define VER_ORIGINALFILENAME_STR    "IPBC.exe"
