--- a/src/cryptonotewallet.rc
+++ b/src/cryptonotewallet.rc
@@ -1,11 +1,11 @@
-IDI_ICON1               ICON    "images\ipbc.ico"
+IDI_ICON1               ICON    "images\wallet.ico"
 
 #include <windows.h>
 
-#define VER_FILEVERSION             1,0,1,0
-#define VER_FILEVERSION_STR         "1.0.1.0\0"
-#define VER_PRODUCTVERSION          1,0,1
-#define VER_PRODUCTVERSION_STR      "1.0.1\0"
+#define VER_FILEVERSION             1,0,2,0
+#define VER_FILEVERSION_STR         "1.0.2.0\0"
+#define VER_PRODUCTVERSION          1,0,2
+#define VER_PRODUCTVERSION_STR      "1.0.2\0"
 #define VER_FILEDESCRIPTION_STR     "IPBC Wallet"
 #define VER_INTERNALNAME_STR        "IPBC"
 #define VER_LEGALCOPYRIGHT_STR      "Copyright (C) 2016-2017, IPBC Developers"
