--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,22 +25,22 @@ include_directories(${CMAKE_BINARY_DIR}
 if(WIN32)
   if(CMAKE_SIZEOF_VOID_P EQUAL 8)
       set (CMAKE_PREFIX_PATH "C:\\Qt\\5.9.1\\msvc2015_64")
-      set (BOOST_ROOT "C:\\vcpkg\\packages\\boost_x64-windows")
-      set (BOOST_LIBRARYDIR "C:\\vcpkg\\packages\\boost_x64-windows\\lib")
+      # set (BOOST_ROOT "C:\\vcpkg\\packages\\boost_x64-windows")
+      # set (BOOST_LIBRARYDIR "C:\\vcpkg\\packages\\boost_x64-windows\\lib")
   elseif(CMAKE_SIZEOF_VOID_P EQUAL 4)
       set (CMAKE_PREFIX_PATH "C:\\Qt\\5.9.1\\msvc2015")
-      set (BOOST_ROOT "C:\\vcpkg\\packages\\boost_x86-windows")
-      set (BOOST_LIBRARYDIR "C:\\vcpkg\\packages\\boost_x86-windows\\lib")
+      # set (BOOST_ROOT "C:\\vcpkg\\packages\\boost_x86-windows")
+      # set (BOOST_LIBRARYDIR "C:\\vcpkg\\packages\\boost_x86-windows\\lib")
   endif()
 elseif(APPLE)
-  set (CMAKE_PREFIX_PATH "/Users/David/qt/5.10.0/clang_64")
+  # set (CMAKE_PREFIX_PATH "/Users/David/qt/5.10.0/clang_64")
 endif(WIN32)
 
 find_package(Qt5Gui REQUIRED)
 find_package(Qt5Widgets REQUIRED)
 find_package(Qt5Network REQUIRED)
 
-set(Boost_USE_STATIC_LIBS OFF)
+set(Boost_USE_STATIC_LIBS ON)
 
 find_package(Boost 1.55 REQUIRED COMPONENTS date_time filesystem program_options regex serialization system thread chrono)
 if ((${Boost_MAJOR_VERSION} EQUAL 1) AND (${Boost_MINOR_VERSION} EQUAL 54))
