--- a/src/karbowanecwallet.desktop
+++ b/src/karbowanecwallet.desktop
@@ -2,11 +2,11 @@
 Encoding=UTF-8
 Name=IPBC-Wallet
 GenericName=IPBC-Wallet
-Name[uk]=IPBC-Wallet
+Name[en]=IPBC-Wallet
 Name[de]=IPBC-Wallet
 Name[es]=IPBC-Wallet
 Comment=IPBC-Wallet
-Comment[uk]=IPBC-Wallet
+Comment[en]=IPBC-Wallet
 Comment[de]=IPBC-Wallet
 Comment[es]=IPBC-Wallet
 Exec=IPBC %U
@@ -15,4 +15,4 @@ Type=Application
 Icon=IPBC
 MimeType=x-scheme-handler/IPBC;
 Categories=Office;Finance;
-Version=1.2.0
+Version=1.1.1
