--- a/src/cryptonotewallet.rc
+++ b/src/cryptonotewallet.rc
@@ -6,11 +6,11 @@ IDI_ICON1               ICON    "images\wallet.ico"
 #define VER_FILEVERSION_STR         "1.1.1.0\0"
 #define VER_PRODUCTVERSION          1,1,1
 #define VER_PRODUCTVERSION_STR      "1.1.1\0"
-#define VER_FILEDESCRIPTION_STR     "IPBC Wallet"
-#define VER_INTERNALNAME_STR        "IPBC"
-#define VER_LEGALCOPYRIGHT_STR      "Copyright (C) 2016-2017, IPBC Developers"
-#define VER_ORIGINALFILENAME_STR    "IPBC.exe"
-#define VER_PRODUCTNAME_STR         "IPBC"
+#define VER_FILEDESCRIPTION_STR     "BitTube Wallet"
+#define VER_INTERNALNAME_STR        "BitTube"
+#define VER_LEGALCOPYRIGHT_STR      "Copyright (C) 2016-2018 The BitTube Developers"
+#define VER_ORIGINALFILENAME_STR    "BitTube.exe"
+#define VER_PRODUCTNAME_STR         "BitTube"
 
 VS_VERSION_INFO VERSIONINFO
 FILEVERSION     VER_FILEVERSION
